--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && webpack",
     "dev": "webpack serve",
     "predeploy": "npm run build",
-    "deploy": "gi -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
